samples/_failures_safe/1761324527_37ca73_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_abf5b281.c: In function ‘main’:
./samples/SAFE/__tmp_abf5b281.c:130:12: error: missing terminating " character
  130 |     printf("Compressed
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_abf5b281.c:130:5: error: expected expression at end of input
  130 |     printf("Compressed
      |     ^~~~~~
./samples/SAFE/__tmp_abf5b281.c:130:5: error: expected declaration or statement at end of input
